--- a/src/index.css
+++ b/src/index.css
@@ -1,64 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,100&family=Inter:wght@100&family=Questrial&family=Roboto:wght@100&family=Space+Mono&family=Ubuntu:wght@500&display=swap');
 body {
   color: aliceblue;
   background-color: #1f2a48;
+   font-family: 'Space Mono', monospace;;
 }
-.box {
-  width: 55vw;
-}
-.img-btn {
-  /* background-attachment: none;
-   */
-  font-style: none;
-  background: none;
-  border: none;
-  outline: none;
-}
-.area {
-  width: 110%;
-  height: 350px;
-}
-.head {
-  display: flex;
-  justify-content: space-between;
-}
+
 .buttonIn {
   /* height: 80px; */
-  width: 710px;
+  width: 60%;
   position: relative;
   /* background-color: #141c2f; */
 }
 
-.btn {
-  /* margin-right: 78%; */
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-  background-color: #141c2f;
-  /* box-shadow: 0 5px 15px rgb(0 0 0 / 35%); */
-  height: 300px;
-  /* margin-left: 25vw; */
-  /* margin-top: 70px; */
-  /* overflow: hidden; */
-  overflow-y: auto;
-  width: 600px;
-  padding: 10px;
-  margin-left: 30px;
-  border-radius: 15px;
-
-  /* display: none; */
-}
-.btn::-webkit-scrollbar {
-  /* WebKit */
-  width: 0;
-  height: 0;
-}
-.sub-btn {
-  margin-top: 69px;
-  background: white;
-  margin-left: 0px;
-}
-.item {
-  background-color: aliceblue;
-}
 .search {
   display: flex;
   flex-direction: row;
@@ -66,127 +19,30 @@ body {
   margin-top: 100px;
   /* width: 400px; */
 }
-.serdata {
-  width: 500px;
-  margin: 0 auto;
-  height: 50px;
-  background-color: #141c2f;
-  border-radius: 5px;
-  border-style: none;
-  color: white;
-  font-size: 25px;
-  padding-left: 10px;
-}
-form {
-  /* align-items: center;
-   */
-  /* margin-top: 250px; */
-}
 
 input {
-  width: 480px;
+  width: 580px;
   /* margin : 0 auto; */
   margin: 10px;
-  height: 50px;
+  height: 62px;
   background-color: #141c2f;
   border-radius: 5px;
   border-style: none;
   color: white;
   font-size: 25px;
   padding-left: 10px;
+  margin-right: 0px;
 }
 
-.sub-btn {
-  position: absolute;
-  top: 0;
-  border-radius: 5px;
-  right: 0px;
-  z-index: 2;
-  border: none;
-  top: 2px;
-  height: 30px;
-  cursor: pointer;
-  /* margin-top: 10px; */
-  width: 100px;
-  height: 48px;
-  /* margin-bottom: 20px; */
-  font-size: 20px;
+
+@media only screen and (max-width: 540px)
+{
+.buttonIn{
+   width: 100%;
+  position: relative;
 }
-#one {
-  width: 700px;
-}
-img {
-  margin-top: 15px;
-  margin-left: 15px;
-  margin-right: 15px;
-  height: 100px;
-  width: 100x;
-  border-radius: 50%;
 }
 
-.div {
-  display: flex;
-  /* height: 00px; */
-  padding-right: 100px;
-  justify-content: space-between;
 
-  /* border: 1px solid red; */
-  background-color: #141c2f;
-  border-radius: 15px;
-  /* width: 50%; */
-  width: 600px;
-}
 
-.container {
-  margin: 0 auto;
 
-  height: 300px;
-
-  width: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  margin-top: 50px;
-  margin-bottom: 5px;
-}
-
-.showoff {
-  background-color: #1f2a48;
-  border-radius: 5px;
-  margin-top: 25px;
-  padding-top: 10px;
-  display: flex;
-  justify-content: space-around;
-  /* border:1px solid ; */
-  height: 50px;
-  width: 350px;
-  /* border: 1px solid sandybrown; */
-}
-
-.inline {
-  /* border: 1px solid; */
-  display: flex;
-  justify-content: space-between;
-}
-
-.foot {
-  margin-top: 10%;
-}
-
-.footer1 {
-  display: flex;
-  /* border: 1px solid black; */
-  justify-content: space-between;
-}
-
-.footer2 {
-  display: flex;
-  margin-top: 10px;
-  /* border: 1px solid black; */
-  justify-content: space-between;
-}
-
-h1 {
-  margin-bottom: 0px;
-}
